# accelerate-sf-hackathon

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: ai.py  main.py  presets.py  prompt.py  pyproject.toml  schema.py  schema_extraction.py  sqlquery.py  table_schema.py  visualize.py
backend/notebooks/: rag.ipynb
chatgpt/: package.json
chatgpt/app/api/imgResponse/: route.ts
chatgpt/app/api/preset/: route.ts
chatgpt/app/api/response/: route.ts
chatgpt/app/api/textResponse/: route.ts
chatgpt/app/test/: page.tsx
chatgpt/app/test-2/: page.tsx
chatgpt/components/: Form.tsx  Modal.tsx  ResponseComp.tsx  Steps.tsx  SuggestedPrompts.tsx  Table.tsx
chatgpt/lib/: index.ts
data/: Budget_-_FTE_20231104.parquet  Budget_20231104.parquet  Employee_Compensation_20231104.parquet  Spending_-_FTE_20231104.parquet  Spending_and_Revenue_20231104.parquet  Supplier_Contracts_20231104.parquet  Vendor_Payments__Purchase_Order_Summary__20231104.parquet  Vendor_Payments__Vouchers__20231104.parquet  employee_compensation.json  purchase_order_summary.json  spending_and_revenue.json  spending_fte.json  supplier_sample.json  vouchers_sample.json
