[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Noorvir Aulakh <noorvir.aulakh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
jupyter = "^1.0.0"
uvicorn = "^0.24.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
duckdb = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
